--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700;800&display=swap");
 
 * {
   margin: 0;
@@ -10,22 +10,18 @@
   box-sizing: border-box;
 }
 
-
 :root {
   --primary-dark: #5651e5;
   --primary-light: #709dff;
 }
 
-
-
-
 @layer base {
   html {
-    @apply scroll-smooth
+    @apply scroll-smooth;
   }
 
   body {
-    @apply font-[Poppins]
+    @apply font-[Poppins];
   }
 
   /* li {
@@ -37,6 +33,6 @@
   } */
 
   h2 {
-    @apply text-xl font-bold
+    @apply text-xl font-bold;
   }
 }
