--- a/src/components/Calender/calender.css
+++ b/src/components/Calender/calender.css
@@ -109,7 +109,7 @@
 .react-calendar__tile--active {
   background: #8ba00d;
   border-radius: 4px;
-  color: white;
+  color: black;
 }
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
