--- a/src/components/Paginator/style.css
+++ b/src/components/Paginator/style.css
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5rem;
   font-size: 13px;
+  margin-bottom: 0px !important;
   gap: 15px;
 }
 
