--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;600;700;800&display=swap");
 
 * {
   margin: 0;
@@ -21,7 +21,7 @@
   }
 
   body {
-    @apply font-[Poppins];
+    @apply font-[Roboto];
   }
 
   /* li {
